@@ -1,3 +1,6 @@
+2011-09-02  Jean-Louis Martineau <martineau@zmanda.com>
+	* client-src/selfcheck.c (print_platform): Fix.
+
 2011-09-01  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amadmin.c (export) parse version without patch number.
 
